@@ -1,6 +1,6 @@
 [[+view]]
 
-[[+resources:is=``:then=`<p>This resource does not have any children.</p>`:else=`
+[[+resources:is=``:then=`<p>No resources here.</p>`:else=`
 <h2>Resources</h2>
 <ul data-inset="true" data-role="listview" data-filter="true" data-filter-placeholder="Search...">
     [[+resources]]
