@@ -1,0 +1,4 @@
+<h2>[[%context]]: [[+context_key]]</h2>
+<ul data-inset="true" data-role="listview">
+    [[+actions]]
+</ul>
