@@ -1,4 +1,4 @@
-<h2>[[+pagetitle]] ([[+id]])</h2>
+<h2>Resource [[+id]]: [[+pagetitle]]</h2>
 [[+crumbs]]
 <br class="clear" />
 <ul data-inset="true" data-role="listview">
